...
        textView.insertionPointColor = .black
        textView.isHorizontallyResizable = false
        textView.isVerticallyResizable = true
        textView.autoresizingMask = [.width]
        textView.textContainerInset = NSSize(width: 0, height: Self.minimumVerticalInset)
        textView.string = text
        textView.setAccessibilityIdentifier("StickyNotes.noteEditor")

        if let textContainer = textView.textContainer {
            textContainer.containerSize = NSSize(width: 0, height: CGFloat.greatestFiniteMagnitude)
            textContainer.widthTracksTextView = true
        }

...
